5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1798_2567.log
== TEST (2019-06-10 16:04:00) 
-- CODE:
num = int(input())
arte=[]
i=0

while(i<num):
	arte.append(*)
	i+=1

i = num
while(i>0):
	j = arte[:i]
	print(j)
	i-=1
	
	
-- ERROR:
File "XXXX", line 6
    arte.append(*)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:04:16) 
-- CODE:
num = int(input())
arte=[]
i=0

while(i<num):
	arte.append('*')
	i+=1

i = num
while(i>0):
	j = arte[:i]
	print(j)
	i-=1
	
	
-- OUTPUT:
['*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*']
['*', '*', '*', '*']
['*', '*', '*']
['*', '*']
['*']
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:06:33) 
-- CODE:
num = int(input())
arte=[]
i=0

while(i<num):
	arte[0]+'*'
	i+=1

i = num
while(i>0):
	j = arte[:i]
	print(j)
	i-=1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    arte[0]+'*'
IndexError: list index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:06:56) 
-- CODE:
num = int(input())
arte=[]
i=0

while(i<num):
	arte+='*'
	i+=1

i = num
while(i>0):
	j = arte[:i]
	print(j)
	i-=1
	
	
-- OUTPUT:
['*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*']
['*', '*', '*', '*']
['*', '*', '*']
['*', '*']
['*']
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:07:58) 
-- CODE:
num = int(input())
arte=[]
i=0

while(i<num):
	arte+='*'
	i+=1

i = num
while(i>0):
	j = arte[:i]
	print(j)
	i-=1
	
i = i
while(i<=num)
	j = arte[i:]
	print(j)
	i+=1
	
	
-- ERROR:
File "XXXX", line 16
    while(i<=num)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:08:11) 
-- CODE:
num = int(input())
arte=[]
i=0

while(i<num):
	arte+='*'
	i+=1

i = num
while(i>0):
	j = arte[:i]
	print(j)
	i-=1
	
i = i
while(i<=num):
	j = arte[i:]
	print(j)
	i+=1
	
	
-- OUTPUT:
['*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*']
['*', '*', '*', '*']
['*', '*', '*']
['*', '*']
['*']
['*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*']
['*', '*', '*', '*']
['*', '*', '*']
['*', '*']
['*']
[]
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:08:36) 
-- CODE:
num = int(input())
arte=[]
i=0

while(i<num):
	arte+='*'
	i+=1

i = num
while(i>0):
	j = arte[:i]
	print(j)
	i-=1
	
i = 1
while(i<=num):
	j = arte[i:]
	print(j)
	i+=1
	
	
-- OUTPUT:
['*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*']
['*', '*', '*', '*']
['*', '*', '*']
['*', '*']
['*']
['*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*']
['*', '*', '*', '*']
['*', '*', '*']
['*', '*']
['*']
[]
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:09:08) 
-- CODE:
num = int(input())
arte=[]
i=0

while(i<num):
	arte+='*'
	i+=1

i = num
while(i>0):
	j = arte[:i]
	print(j)
	i-=1
	
i = 1
while(i<=num):
	j = arte[:i]
	print(j)
	i+=1
	
	
-- OUTPUT:
['*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*']
['*', '*', '*', '*']
['*', '*', '*']
['*', '*']
['*']
['*']
['*', '*']
['*', '*', '*']
['*', '*', '*', '*']
['*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*']
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 16:09:16) 
-- CODE:
num = int(input())
arte=[]
i=0

while(i<num):
	arte+='*'
	i+=1

i = num
while(i>0):
	j = arte[:i]
	print(j)
	i-=1
	
i = 1
while(i<=num):
	j = arte[:i]
	print(j)
	i+=1
	
	
-- EXECUTION TIME:
0.814225
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
['*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*']
['*', '*', '*', '*']
['*', '*', '*']
['*', '*']
['*']
['*']
['*', '*']
['*', '*', '*']
['*', '*', '*', '*']
['*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*']
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
['*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*']
['*', '*', '*', '*']
['*', '*', '*']
['*', '*']
['*']
['*']
['*', '*']
['*', '*', '*']
['*', '*', '*', '*']
['*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*']
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
['*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*', '*']
['*', '*', '*', '*', '*', '*', '*', '*', '*',
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:14:50) 
-- CODE:
num = int(input())
arte=[]
i=num
while(i>0):
	j=i
	while(j>0):
		print('*', end='')
		j-=1
	i-=1
		

	
	
-- OUTPUT:
************************************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:15:37) 
-- CODE:
num = int(input())
arte=[]
i=num
while(i>0):
	j=i
	while(j>0):
		print('*', end='')
		if(j==0): print("")
		j-=1
	i-=1
		

	
	
-- OUTPUT:
************************************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:15:44) 
-- CODE:
num = int(input())
arte=[]
i=num
while(i>0):
	j=i
	while(j>0):
		print('*', end='')
		if(j==1): print("")
		j-=1
	i-=1
		

	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:16:25) 
-- CODE:
num = int(input())
arte=[]
i=num
while(i>0):
	j=i
	while(j>0):
		print('*', end='')
		if(j==1): print("")
		j-=1
	i-=1

i=1
while(i<=num):
	j=i
	while(j<=num):
		print('*', end='')
		if(j==num): print("")
		j+=1
	i+=1

	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:18:10) 
-- CODE:
num = int(input())
arte=[]
i=num
while(i>0):
	j=i
	while(j>0):
		print('*', end='')
		if(j==1): print("")
		j-=1
	i-=1

i=1
while(i<=num):
	j=i
	while(j<=num):
		print('*', end='')
		if(j==num): print("")
		j+=1
	i+=1

	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:18:47) 
-- CODE:
num = int(input())
arte=[]
i=num
while(i>0):
	j=i
	while(j>0):
		print('*', end='')
		if(j==1): print("")
		j-=1
	i-=1

i=1
while(i<=num):
	j=i
	while(j<=num):
		print('*', end='')
		if(j==i): print("")
		j+=1
	i+=1

	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
********
*******
******
*****
****
***
**
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:21:07) 
-- CODE:
num = int(input())
arte=[]
i=num
while(i>0):
	j=i
	while(j>0):
		print('*', end='')
		if(j==1): print("")
		j-=1
	i-=1

i=1
while(i<=num):
	j=1
	while(j<=num):
		print('*', end='')
		if(j==i): print("")
		j+=1
	i+=1

	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
*********
*********
*********
*********
*********
*********
*********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:22:08) 
-- CODE:
num = int(input())
arte=[]
i=num
while(i>0):
	j=i
	while(j>0):
		print('*', end='')
		if(j==1): print("")
		j-=1
	i-=1

i=1
while(i<=num):
	j=1
	print('*', end='')
	if(j==i): print("")
	j+=1
	i+=1

	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:23:38) 
-- CODE:
num = int(input())
arte=[]
i=num
while(i>0):
	j=i
	while(j>0):
		print('*', end='')
		if(j==1): print("")
		j-=1
	i-=1

i=1
while(i<=num):
	j=1
	while(j<=i):
		print('*', end='')
		if(j==i): print("")
		j+=1
	i+=1

	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 16:23:50) 
-- CODE:
num = int(input())
arte=[]
i=num
while(i>0):
	j=i
	while(j>0):
		print('*', end='')
		if(j==1): print("")
		j-=1
	i-=1

i=1
while(i<=num):
	j=1
	while(j<=i):
		print('*', end='')
		if(j==i): print("")
		j+=1
	i+=1

	
	
-- EXECUTION TIME:
0.756174
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
